# OpenSkynet

./: .coverage  .gitignore  .gitmodules  Cargo.toml  Dockerfile  INDUSTRIAL_STATUS.md  LICENSE  Makefile  PRODUCTION_GUIDE.md  README.md  ROADMAP.md  install  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
app/: index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
crates/sediman-tui-bridge/: Cargo.toml
crates/sediman-tui-bridge/src/: agent.rs  client.rs  memory.rs  scheduler.rs  skills.rs  types.rs
crates/sediman-tui-bridge/tests/: integration_test.rs
crates/sediman-tui-core/: Cargo.toml
crates/sediman-tui-core/src/: lib.rs  markdown.rs
crates/sediman-tui-core/src/command/: registry.rs
crates/sediman-tui-core/src/component/: block.rs  input_row.rs  modal.rs
crates/sediman-tui-core/src/event/: handler.rs  message.rs  mod.rs
crates/sediman-tui-core/src/input/: completer.rs  editor.rs
crates/sediman-tui-core/src/layout/: manager.rs
crates/sediman-tui-core/src/renderer/: ansi.rs  buffer.rs  cell.rs  color.rs  diff.rs  mod.rs  style.rs
crates/sediman-tui-core/src/renderer/gpu/: atlas.rs  mod.rs  renderer.rs
crates/sediman-tui-core/src/styling/: mod.rs  theme.rs  themes.rs
crates/sediman-tui-core/src/widgets/: banner.rs  context_bar.rs  help_overlay.rs  progress_panel.rs  result_panel.rs  status_bar.rs
docs/: CHANGELOG.md  ROADMAP.md  architecture.md
scripts/: generate_skill_embeddings.py  install.sh  restart.sh  sediman.sh
skills/: index.json  skill_embeddings.npz  skill_embeddings_meta.json
tests/: test_agent_browser_agent.py  test_agent_loop.py  test_agent_loop_memory_init.py  test_agent_prompts.py  test_browser_mode_fixes.py  test_cli.py  test_coding_agent.py  test_coding_agent_context_compression.py  test_coding_agent_prompts.py  test_coding_agent_verifier.py  test_delegate_context_isolation.py  test_discord_telegram_bidirectional.py  test_dom_snapshot_overhaul.py  test_element_resolution.py  test_hy_memory_pipeline.py  test_hy_memory_store.py  test_hy_memory_strategy.py  test_memory_context_filtering.py  test_memory_manager.py  test_memory_vector.py  test_multi_path_retry.py  test_new_platform_integrations.py  test_popup_dismiss.py  test_prompt_builder.py  test_reflection_fast_paths.py  test_skill_auditor.py  test_skill_system_overhaul.py  test_skills_engine_extended.py  test_speed_optimizations.py  test_streaming_e2e.py  test_streaming_full_pipeline.py  test_think_parser.py  (+5 more)
(+280 files in other folders)
