[package]
name = "sediman-tui-bridge"
description = "IPC bridge to the Sediman Python backend — Unix socket JSON-RPC"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
