[package]
name = "sediman-tui-core"
description = "Reusable TUI framework — widgets, input, layout, command system, styling"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
crossterm.workspace = true
tokio.workspace = true
futures.workspace = true
ratatui.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
arboard.workspace = true
clap.workspace = true
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }
fontdue = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

[features]
default = []
gpu = ["wgpu", "winit", "fontdue", "bytemuck"]
